--- a/css.html
+++ b/css.html
@@ -5,6 +5,11 @@
     /* 풀다운 새로고침/화면이탈 방지 */
   }
 
+  /* Table copy-paste fix: Remove extra lines between rows */
+  #dataTable {
+    border-collapse: collapse !important;
+  }
+
   body {
     font-family: 'Inter', sans-serif;
     background-color: #f7f9fb;
@@ -545,7 +550,8 @@
 
   /* Badge Styles */
   .stu-tag {
-    display: block;
+    display: inline-block;
+    min-width: 50px;
     margin: 1px;
     padding: 3px 6px;
     font-size: 0.75rem;
@@ -2712,5 +2718,33 @@
       width: 13px;
       height: 13px;
     }
+  }
+
+  /* 충돌 말풍선 툴팁 (전역 fixed 방식) */
+  #g-conflict-tooltip {
+    display: none;
+    position: fixed;
+    width: 120px;
+    background: #1d4ed8;
+    color: #fff;
+    font-size: 10px;
+    line-height: 1.5;
+    border-radius: 6px;
+    padding: 7px 9px;
+    z-index: 9999;
+    pointer-events: none;
+    white-space: normal;
+    word-break: keep-all;
+    text-align: left;
+  }
+
+  #g-conflict-tooltip::after {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    border: 5px solid transparent;
+    border-top-color: #1d4ed8;
   }
 </style>
