--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     </div>
 
                     <div
-                        class="lg:col-span-5 bg-white rounded-xl shadow-lg border border-gray-200 overflow-hidden min-h-[680px] flex flex-col">
+                        class="lg:col-span-4 bg-white rounded-xl shadow-lg border border-gray-200 overflow-hidden min-h-[680px] flex flex-col">
                         <div class="bg-white border-b border-gray-200 px-4 py-3">
                             <div class="flex justify-between items-center mb-1">
                                 <h2 class="text-sm font-bold text-gray-800">물건 상태 관리</h2>
@@ -150,19 +150,19 @@
                             </div>
                         </div>
                         <div class="overflow-x-auto flex-1">
-                            <table class="w-full text-center border-collapse text-sm">
+                            <table class="w-full text-center border-collapse text-xs">
                                 <thead>
                                     <tr
-                                        class="bg-gray-50 border-b border-gray-200 text-gray-600 text-sm uppercase leading-normal">
-                                        <th class="py-2 px-3 font-bold border-r">날짜</th>
-                                        <th class="py-2 px-1 font-bold w-1/6">상품</th>
-                                        <th class="py-2 px-1 font-bold w-1/6">미정</th>
-                                        <th class="py-2 px-1 font-bold w-1/6">추천</th>
-                                        <th class="py-2 px-1 font-bold w-1/6">입찰</th>
-                                        <th class="py-2 px-1 font-bold w-1/6">변경</th>
+                                        class="bg-gray-50 border-b border-gray-200 text-gray-600 text-xs uppercase leading-normal">
+                                        <th class="py-1 px-2 font-bold border-r">날짜</th>
+                                        <th class="py-1 px-1 font-bold w-1/6">상품</th>
+                                        <th class="py-1 px-1 font-bold w-1/6">미정</th>
+                                        <th class="py-1 px-1 font-bold w-1/6">추천</th>
+                                        <th class="py-1 px-1 font-bold w-1/6">입찰</th>
+                                        <th class="py-1 px-1 font-bold w-1/6">변경</th>
                                     </tr>
                                 </thead>
-                                <tbody id="statusTableBody" class="text-gray-700">
+                                <tbody id="statusTableBody" class="text-gray-700 text-xs">
                                     <tr>
                                         <td colspan="6" class="py-4 text-center">데이터 로딩 중...</td>
                                     </tr>
@@ -170,10 +170,42 @@
                             </table>
                         </div>
                     </div>
-                    <div class="lg:col-span-4 h-full flex flex-col justify-center items-center opacity-30">
-                        <div
-                            class="border-2 border-dashed border-gray-300 rounded-xl w-full h-full flex items-center justify-center p-4">
-                            <span class="text-gray-400 font-semibold text-sm">추가 카드 영역</span>
+                    <div class="lg:col-span-5 bg-white rounded-xl shadow-lg border border-gray-200 overflow-hidden flex flex-col self-start">
+                        <div class="bg-white border-b border-gray-200 px-4 py-3 flex justify-between items-center flex-shrink-0">
+                            <h2 class="text-sm font-bold text-gray-800">자동 물건 등록/매칭 현황</h2>
+                            <button onclick="loadDashboardImageStats()"
+                                class="text-xs bg-indigo-50 hover:bg-indigo-100 text-indigo-600 font-medium px-3 py-1 rounded-lg transition duration-150">새로고침</button>
+                        </div>
+                        <div class="overflow-auto" style="max-height:160px;">
+                            <table class="w-full text-xs text-center border-collapse table-fixed">
+                                <colgroup>
+                                    <col style="width:16%">
+                                    <col style="width:12%">
+                                    <col style="width:12%">
+                                    <col style="width:12%">
+                                    <col style="width:12%">
+                                    <col style="width:12%">
+                                    <col style="width:12%">
+                                    <col style="width:12%">
+                                </colgroup>
+                                <thead class="sticky top-0 z-10">
+                                    <tr class="bg-gray-50 border-b border-gray-200 text-gray-600 text-xs uppercase leading-normal">
+                                        <th class="py-1 px-1 font-bold">실행시간</th>
+                                        <th class="py-1 px-1 font-bold">담당자</th>
+                                        <th class="py-1 px-1 font-bold"><span class="cursor-help" onmouseenter="showConflictTooltip(event)" onmouseleave="hideConflictTooltip()">충돌 ⓘ</span></th>
+                                        <th class="py-1 px-1 font-bold">전체</th>
+                                        <th class="py-1 px-1 font-bold">신규등록</th>
+                                        <th class="py-1 px-1 font-bold">매칭<br>(이미지)</th>
+                                        <th class="py-1 px-1 font-bold">매칭<br>(옥션ID)</th>
+                                        <th class="py-1 px-1 font-bold">매칭X<br>(옥션ID)</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="imageSyncStatsBody" class="text-gray-700">
+                                    <tr>
+                                        <td colspan="8" class="py-4 text-center text-gray-400">데이터 로딩 중...</td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -539,6 +571,16 @@
                         <span id="activeFilterText">필터 적용 중</span>
                         <button onclick="clearDashboardFilter()"
                             class="text-indigo-600 hover:text-indigo-900 focus:outline-none"><svg class="w-4 h-4"
+                                fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M6 18L18 6M6 6l12 12"></path>
+                            </svg></button>
+                    </div>
+                    <div id="syncFilterBanner"
+                        class="bg-violet-100 text-violet-800 px-4 py-2 text-sm font-semibold flex justify-between items-center content-hidden">
+                        <span id="syncFilterText">이미지동기화 필터 적용 중</span>
+                        <button onclick="clearDashboardFilter()"
+                            class="text-violet-600 hover:text-violet-900 focus:outline-none"><svg class="w-4 h-4"
                                 fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M6 18L18 6M6 6l12 12"></path>
@@ -1722,6 +1764,12 @@
                                         법원</th>
                                     <th
                                         class="px-3 py-2 text-left text-[10px] font-bold text-gray-500 uppercase tracking-wider">
+                                        기존담당자</th>
+                                    <th
+                                        class="px-3 py-2 text-left text-[10px] font-bold text-gray-500 uppercase tracking-wider">
+                                        파일담당자</th>
+                                    <th
+                                        class="px-3 py-2 text-left text-[10px] font-bold text-gray-500 uppercase tracking-wider">
                                         메시지</th>
                                     <th
                                         class="px-3 py-2 text-left text-[10px] font-bold text-gray-500 uppercase tracking-wider">
@@ -1737,68 +1785,6 @@
                         </table>
                     </div>
 
-                    <!-- [NEW] 동기화 충돌 관리 섹션 (대기실) -->
-                    <div class="mt-10 pt-8 border-t border-gray-200">
-                        <div class="flex flex-col md:flex-row justify-between items-start md:items-center mb-4 gap-4">
-                            <div>
-                                <h3 class="text-xl font-bold text-red-700 flex items-center">
-                                    <svg class="w-6 h-6 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                            d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z">
-                                        </path>
-                                    </svg>
-                                    중복 이미지 동기화 관리 (대기실)
-                                </h3>
-                                <p class="text-sm text-gray-600 mt-1">입찰일/사건번호가 같지만 <b>담당자(업로더)</b>가 달라 처리가 보류된 항목들입니다.
-                                </p>
-                            </div>
-                            <div class="flex gap-2">
-                                <button onclick="loadSyncConflicts()"
-                                    class="bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-6 rounded-lg shadow-md transition flex items-center">
-                                    <svg class="w-4 h-4 mr-1.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                            d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15">
-                                        </path>
-                                    </svg>
-                                    조회
-                                </button>
-                                <button onclick="showBulkSyncResolveModal()"
-                                    class="bg-gray-800 hover:bg-black text-white font-bold py-2 px-6 rounded-lg shadow-md transition">
-                                    일괄적용
-                                </button>
-                            </div>
-                        </div>
-
-                        <div id="syncConflictContainer" class="border rounded-xl overflow-hidden shadow-sm bg-white">
-                            <div class="overflow-x-auto">
-                                <table class="min-w-full divide-y divide-gray-200">
-                                    <thead class="bg-red-50">
-                                        <tr class="text-[11px] uppercase tracking-wider">
-                                            <th class="px-3 py-3 text-center w-10">
-                                                <input type="checkbox" id="sync-conflict-checkall"
-                                                    onchange="toggleAllSyncConflictCheckboxes(this)" class="rounded">
-                                            </th>
-                                            <th class="px-3 py-3 text-left font-bold text-red-800">발생시간/사건번호</th>
-                                            <th class="px-3 py-3 text-left font-bold text-red-800">법원</th>
-                                            <th class="px-3 py-3 text-left font-bold text-red-800">상태</th>
-                                            <th class="px-3 py-3 text-left font-bold text-red-800">회원(명의)</th>
-                                            <th class="px-3 py-3 text-right font-bold text-red-800">입찰가</th>
-                                            <th class="px-3 py-3 text-left font-bold text-red-800">기존 담당</th>
-                                            <th class="px-3 py-3 text-left font-bold text-red-800">신규 요청(선택)</th>
-                                            <th class="px-3 py-3 text-center font-bold text-red-800">작업</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody id="syncConflictTableBody" class="divide-y divide-gray-100 text-xs">
-                                        <tr>
-                                            <td colspan="9" class="px-4 py-12 text-center text-gray-500 italic">대기 중인 충돌
-                                                내역이 없습니다.
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
                 </div>
 
                 <div class="bg-white p-6 rounded-xl shadow-lg mb-6 border border-blue-200">
@@ -2261,6 +2247,9 @@
             </div>
         </div>
     </div>
+
+    <!-- 전역 충돌 말풍선 툴팁 -->
+    <div id="g-conflict-tooltip"></div>
 
 </body>
 
