--- a/index.html
+++ b/index.html
@@ -740,8 +740,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="flex-1 overflow-y-auto">
-                        <table class="item-list-table min-w-full divide-y divide-gray-200">
+                    <div class="flex-1 overflow-auto" style="min-width:0;">
+                        <table class="item-list-table divide-y divide-gray-200">
                             <thead class="bg-gray-50 sticky top-0 z-10">
                                 <tr>
                                     <th class="item-col-check px-1 py-3 text-center text-xs md:text-base font-bold text-gray-800 cursor-default flex-shrink-0"
@@ -754,8 +754,9 @@
                                     <th data-sort="in-date" onclick="sortItemList('in-date')"
                                         class="item-col-date px-2 py-3 text-center text-xs md:text-base font-bold text-gray-800 cursor-pointer hover:bg-gray-100 select-none">
                                         일자</th>
-                                    <th
-                                        class="item-col-img list-th-img px-1 py-3 text-center text-xs md:text-base font-bold text-gray-800 cursor-default">
+                                    <th data-sort="has_images" onclick="sortItemList('has_images')"
+                                        class="item-col-img list-th-img px-1 py-3 text-center text-xs md:text-base font-bold text-gray-800 cursor-pointer hover:bg-gray-100 select-none"
+                                        title="IMG 정렬">
                                         IMG</th>
                                     <th data-sort="sakun_no" onclick="sortItemList('sakun_no')"
                                         class="item-col-sakun px-2 py-3 text-center text-xs md:text-base font-bold text-gray-800 cursor-pointer hover:bg-gray-100 select-none">
@@ -766,17 +767,24 @@
                                     <th data-sort="stu_member" onclick="sortItemList('stu_member')"
                                         class="item-col-status px-1 py-3 text-center text-xs md:text-base font-bold text-gray-800 cursor-pointer hover:bg-gray-100 select-none">
                                         상태</th>
+                                    <th data-sort="telegram_enabled" onclick="sortItemList('telegram_enabled')"
+                                        class="item-col-telegram px-1 py-3 text-center text-xs md:text-base font-bold text-gray-800 cursor-pointer hover:bg-gray-100 select-none"
+                                        title="텔레그램 연동">
+                                        T</th>
                                     <th data-sort="m_name" onclick="sortItemList('m_name')"
                                         class="item-col-member px-1 py-3 text-center text-xs md:text-base font-bold text-gray-800 cursor-pointer hover:bg-gray-100 select-none">
                                         회원</th>
                                     <th data-sort="m_name_id" onclick="sortItemList('m_name_id')"
                                         class="item-col-manager px-2 py-3 text-center text-xs md:text-base font-bold text-gray-800 cursor-pointer hover:bg-gray-100 select-none">
                                         담당</th>
+                                    <th data-sort="bidprice" onclick="sortItemList('bidprice')"
+                                        class="item-col-bidprice px-2 py-3 text-right text-xs md:text-base font-bold text-gray-800 cursor-pointer hover:bg-gray-100 select-none">
+                                        입찰가</th>
                                 </tr>
                             </thead>
                             <tbody id="dataTableBody" class="bg-white divide-y divide-gray-100">
                                 <tr>
-                                    <td colspan="8" class="p-4 text-center text-gray-500">
+                                    <td colspan="10" class="p-4 text-center text-gray-500">
                                         <div id="loadingIndicator" class="flex justify-center items-center p-4">
                                             <div
                                                 class="loader ease-linear rounded-full border-4 border-t-4 border-gray-200 h-8 w-8 mr-3">
@@ -895,6 +903,7 @@
                                                 <label for="form-m-name"
                                                     class="block text-sm font-medium text-gray-700 mb-1">
                                                     회원명
+                                                    <span id="detail-telegram-badge" class="ml-1"></span>
                                                     <span id="display-member-id"
                                                         class="ml-1 text-xs text-blue-600 font-normal leading-snug break-words"></span>
                                                 </label>
@@ -1958,7 +1967,7 @@
                             </select>
                         </div>
                         <div class="mb-4 md:col-span-2">
-                            <label class="block text-sm font-medium text-gray-700 mb-1">회원명 <span
+                            <label class="block text-sm font-medium text-gray-700 mb-1">회원명 <span id="modal-telegram-badge" class="ml-1"></span><span
                                     id="modal-display-member-id" class="ml-2 text-xs text-blue-600"></span></label>
                             <div class="flex items-center">
                                 <input type="text" id="modal-form-m-name" list="modal-member-datalist"
