feat: 회원화면 입찰가 표시 UX 개선 + 캘린더 자동 갱신 폴링 추가
- js-app.html:
  * [MemberItemList] cItem() 함수에 bid_state 분기 추가
    - 전달완료: '입찰가 도착! 터치하세요 👆' (주황, 깜빡임, 클릭 가능)
    - 확인완료: 전체 입찰가 공개 (파란색)
    - 신규/기타: '가격미정' (회색)
  * handleBidPriceClick() UX 개선
    - 터치 즉시 인라인 로딩 스피너 표시 ('잠시만 기다려 주세요...')
    - 성공 시 해당 카드 가격 div만 즉시 DOM 업데이트 (전체 재렌더 없음)
    - 실패/오류 시 원래 상태로 자동 복원
  * BiddingSchedule 탭 15초 자동 갱신 폴링 추가 (startCalendarPolling_)
    - 탭 진입 시 시작, 이탈 시 중지
    - 입찰가 확인완료/자동승인 등 외부 변경사항 자동 반영
  * 오타 수정: '도싥' → '도착'

- css.html:
  * ic-price-pending / ic-price-confirmed / ic-price-default 클래스 추가
  * ic-price-loading + ic-spin 스피너 애니메이션 추가

--- a/css.html
+++ b/css.html
@@ -138,18 +138,7 @@
     /* 붉고 진하게 */
   }
 
-  /* 입찰가 블러 처리 및 확인완료 상태 스타일 추가 */
-  .price-blur {
-    filter: blur(5px);
-    transition: filter 0.3s ease;
-    cursor: pointer;
-    user-select: none;
-  }
-
-  .price-clear {
-    filter: blur(0);
-  }
-
+  /* 확인완료 상태 스타일 */
   .bid-state-confirmed {
     color: #2563eb !important;
     /* blue-600 */
@@ -968,6 +957,24 @@
     vertical-align: middle;
   }
 
+  /* 확인완료 상태 텔레그램 뱃지 (파란 배경, 흰 T) */
+  .telegram-badge-confirmed {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    background: #2563eb;
+    border: 1.5px solid #2563eb;
+    color: #fff;
+    font-size: 10px;
+    font-weight: 700;
+    line-height: 1;
+    flex-shrink: 0;
+    vertical-align: middle;
+  }
+
   /* 입찰 목록 테이블 컬럼 폭·정렬 - 가로 스크롤 지원 */
   .item-list-table {
     table-layout: fixed;
@@ -984,6 +991,7 @@
     z-index: 2;
     background: #ffffff;
   }
+
   .item-list-table thead th.item-col-check {
     z-index: 12;
     background: #f9fafb;
@@ -997,6 +1005,7 @@
     z-index: 2;
     background: #ffffff;
   }
+
   .item-list-table thead th.item-col-date {
     z-index: 12;
     background: #f9fafb;
@@ -1011,6 +1020,7 @@
     z-index: 2;
     background: #ffffff;
   }
+
   .item-list-table thead th.item-col-img {
     z-index: 12;
     background: #f9fafb;
@@ -1037,8 +1047,9 @@
     left: 158px;
     z-index: 2;
     background: #ffffff;
-    box-shadow: 2px 0 4px rgba(0,0,0,0.06);
+    box-shadow: 2px 0 4px rgba(0, 0, 0, 0.06);
   }
+
   .item-list-table thead th.item-col-sakun {
     z-index: 12;
     background: #f9fafb;
@@ -2440,8 +2451,67 @@
   .ic-price {
     font-size: 1.1rem;
     font-weight: 900;
-    color: #ef4444;
+    color: #9ca3af;
+    /* 기본 회색 (서브클래스로 override) */
     margin-top: 4px;
+  }
+
+  /* 전달완료: 클릭 유도 (주황, pulse 애니메이션) */
+  .ic-price-pending {
+    color: #f97316;
+    cursor: pointer;
+    animation: icPricePulse 1.6s ease-in-out infinite;
+  }
+
+  @keyframes icPricePulse {
+
+    0%,
+    100% {
+      opacity: 1;
+    }
+
+    50% {
+      opacity: 0.55;
+    }
+  }
+
+  /* 확인완료: 파란색 전체 공개 */
+  .ic-price-confirmed {
+    color: #2563eb;
+  }
+
+  /* 기본/신규: 회색 미정 */
+  .ic-price-default {
+    color: #9ca3af;
+    font-weight: 500;
+    font-size: 0.9rem;
+  }
+
+  /* 로딩 중: 회색 + 스피너 */
+  .ic-price-loading {
+    color: #94a3b8;
+    font-size: 0.85rem;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+  }
+
+  .ic-spin {
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    border: 2px solid #cbd5e1;
+    border-top-color: #4f46e5;
+    border-radius: 50%;
+    animation: icSpinAnim 0.7s linear infinite;
+    flex-shrink: 0;
+  }
+
+  @keyframes icSpinAnim {
+    to {
+      transform: rotate(360deg);
+    }
   }
 
   .copy-btn {
