--- a/index.html
+++ b/index.html
@@ -1987,6 +1987,9 @@
                                     <button type="button" onclick="setBidState('전달완료')"
                                         id="modal-bid-state-delivered-btn"
                                         class="bg-gray-100 hover:bg-gray-200 text-gray-700 text-xs px-2 py-0.5 rounded border border-gray-300 transition">전달완료</button>
+                                    <button type="button" onclick="setBidState('확인완료')"
+                                        id="modal-bid-state-confirmed-btn"
+                                        class="bg-gray-100 hover:bg-gray-200 text-gray-700 text-xs px-2 py-0.5 rounded border border-gray-300 transition">확인완료</button>
                                 </div>
                             </div>
                             <input type="text" id="modal-form-bidprice" oninput="formatNumber(this)"
